--- a/cadastro_de_anuncios.ipynb
+++ b/cadastro_de_anuncios.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cadastro de anuncios",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbRii0VuaFpgcsv9J9ccbs",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOlIujGPdzBZN+0R08lix/x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +37,7 @@
         "import datetime\n",
         "from math import ceil\n",
         "\n",
+        "#Crie um sistema que permita o cadastro de anúncios. O anúncio deverá conter os seguintes dados:\n",
         "anuncio = str(input('Digite o nome do anúncio: '))\n",
         "cliente = str(input('Digite o nome do cliente: '))\n",
         "d1 = int(input('Digite o dia de início do anúncio: '))\n",
@@ -57,7 +59,7 @@
         "terceiro = segundo * (40 * 0.12) * 0.15\n",
         "visualizaçao = ceil((original + primeiro + segundo + terceiro) * intervalo)\n",
         "\n",
-        "#Valor total investido\n",
+        "#Valor total investido:\n",
         "investimento = investimento_diario * intervalo\n",
         "\n",
         "#Cliques:\n",
